<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAzur"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="50dp"
            android:background="@color/colorPrimaryDark1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="20sp"
                android:textColor="#fff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_text"
                android:textSize="10sp"
                android:textColor="#fff"
                android:layout_marginTop="25dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="40dp">

                <Button
                    android:id="@+id/btnRead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Selengkapnya"
                    android:layout_marginRight="20dp"
                    android:textSize="13dp"
                    android:textColor="#fff"
                    android:background="@drawable/buttonstyle1"/>
                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gabung Sekarang"
                    android:textSize="13dp"
                    android:textColor="#fff"
                    android:background="@drawable/buttonstyle2"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="40dp"
            android:gravity="center">

            <EditText
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:hint="@string/user"
                android:drawablePadding="10dp"/>
            <EditText
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:drawablePadding="10dp"/>
            <Button
                android:drawableRight="@drawable/ic_send_white_24dp"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:text="Login"
                android:textColor="#fff"
                android:background="@drawable/buttonstyle2"
                android:layout_marginBottom="@dimen/activity_vertical_layout" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>